# churn

./: pyproject.toml
datasets/: iml1_unidade2_dados.csv
