[tool.poetry]
name = "churn"
version = "0.1.0"
description = ""
authors = ["Rafael Silva <teixeirarafa10@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.18"
scikit-learn = "^1.5.1"
seaborn = "^0.13.2"
matplotlib = "^3.9.2"
xgboost = "^2.1.1"
catboost = "^1.2.6"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"
dataprep = "^0.4.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
